Save progress on fixing z-index issues on modals

--- a/app/assets/stylesheets/_team-submissions.scss
+++ b/app/assets/stylesheets/_team-submissions.scss
@@ -17,11 +17,15 @@
 .team-submissions__row-left,
 .team-submissions__row-right {
   width: 25%;
+  position: relative;
+  z-index: 0;
 }
 
 .team-submissions__row-center {
   margin: 0 1em;
   width: 50%;
+  position: relative;
+  z-index: 0;
 }
 
 @media (max-width: $device-sm) {
@@ -326,11 +330,4 @@ h2.submissions-onboarding-step__heading {
 
 .submission-step__ideation {
   background-color: #c1c320;
-}
-
-@media only screen and (min-width: $device-md) {
-  .team-submissions__fixed-col {
-    position: sticky;
-    top: 15px;
-  }
 }
